@@ -28,7 +28,7 @@
 
 #define SC_REG_SIZE 4
 #define SC_REG_ADDR  (SC_REG_SIZE * ORIG_EAX)
-#define SC_RET_ADDR  (SC_REG_SIZE * ORIG_EAX)
+#define SC_RET_ADDR  (SC_REG_SIZE * EAX)
 #define SC_ARG1_ADDR (SC_REG_SIZE * EBX)
 #define SC_ARG2_ADDR (SC_REG_SIZE * ECX)
 #define SC_ARG3_ADDR (SC_REG_SIZE * EDX)
