@@ -1,5 +1,9 @@
 2011-11-25  Giuseppe Scrivano  <giuseppe@southpole.se>
 
+	fix syscall return value register.
+	* src/arch/linux_i386.c (SC_RET_ADDR): Fix syscall return register.
+	* src/arch/linux_x86_64.c (SC_RET_ADDR): Likewise.
+
 	fix test suite build.
 	* tests/Makefile.am (LDADD): Use libroach.la instead of libroach.a
 
